--- a/mobile_app/exportation/pubspec.yaml
+++ b/mobile_app/exportation/pubspec.yaml
@@ -66,10 +66,21 @@ dev_dependencies:
   build_runner: ^2.4.8
   hive_generator: ^2.0.1
   riverpod_generator: ^2.3.9
+  flutter_launcher_icons: ^0.14.4
+
+# Configuration des icônes de l'application
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#5D4037"
+  adaptive_icon_foreground: "assets/images/logo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
   
-  # assets:
-  #   - assets/images/
-  #   - assets/icons/
+  assets:
+    - assets/images/
+    - assets/icons/
